# desktop-reminder

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  config  desktop-reminder-preferences.desktop.in.in  reminder-preferences.ui
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
reminder-preferences/: Makefile.am  desktop-remainer.c  main.c
src/: Makefile.am  desktop-reminder.c  desktop-reminder.h  main.c  pixbuf_util.c  pixbuf_util.h
